# django-db-log-example

./: .gitignore  pyproject.toml
example/: settings.py  urls.py
