[tool.poetry]
name = "django-db-log-test"
version = "0.1.0"
description = ""
authors = ["David Cramer <dcramer@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^2.7"
django-db-log = "^2.2"
Django = "~1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
